[package]
name = "ds-bst"
description = "Binary search tree implementation"
version = "0.2.0"
authors = ["Deepak Thukral <iapain@gmail.com>"]
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/ds-bst"
repository = "https://github.com/iapain/rust-bst"
readme = "./README.md"
keywords = ["tree", "bst"]
categories = ["mathematics", "data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
